--- a/project5/assets/css/components.css
+++ b/project5/assets/css/components.css
@@ -1,51 +1,3 @@
-/* .container {
-    width: 200px;
-    height: 300px;
-    margin: 50px;
-    padding: 50px;
-    border: 20px solid#000;
-} */
-
-html,
-body {
-    height: 100%;
-}
-
-.container {
-    background-color: #cde3e3;
-    width: 50%;
-    padding: 50px;
-    border: 20px solid#000;
-}
-
-.box-1 {
-    width: 400px;
-    height: 200px;
-    background-color: #e7e71b;
-    padding: 25px;
-    margin: 50px;
-    border: 20px solid #000;
-}
-
-.box-2 {
-    width: 400px;
-    height: 200px;
-    background-color: #f00;
-    padding: 50px;
-    margin: 50px;
-    border: 20px solid #000;
-}
-
-.box-3 {
-    background-color: #e98e1f;
-    width: 400px;
-    height: 400px;
-    border: 20px solid #000;
-    /* border-radius: 100px; */
-    /* border-radius: 200px; */
-
-    /* better circle shaped border */
-    border-radius: 50%;
-    /* border-style: dotted; */
-
+.image {
+    float: right;
 }
